# agent-ear

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .venv  .vulnix-whitelist.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  README.md  SECURITY.md  flake.nix
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-brew.yml  scorecard.yml  vulnix.yml
docs/: index.md
docs/adr/: 001-slug-sanitization-at-filename-construction.md  002-offline-only-link-checking.md  003-upload-routing-strategy.md  004-gum-as-wizard-framework.md
docs/explanation/: architecture.md  comparison-with-wispr-flow.md  gcs-staging.md
docs/guides/: interactive-mode.md  meeting-transcription.md  nix-consumer-integration.md  setup-gcs-staging.md  setup-google-ai-studio.md  setup-vertex-ai.md
docs/how-to-guides/: how-to-add-agent-ear-to-nix-flake.md  how-to-install-via-homebrew.md  how-to-record-meetings.md  how-to-setup-gcs-staging.md  how-to-setup-google-ai-studio.md  how-to-setup-vertex-ai.md  how-to-use-interactive-mode.md  how-to-use-interactive-terminal-wizard.md  how-to-use-tts-briefing.md  how-to-write-your-own-prompt-template.md  interactive-mode.md  setup-google-ai-studio.md
docs/reference/: authentication.md  cli.md  environment-variables.md  interactive-tui.md
docs/tutorials/: first-transcription.md  home-manager-setup.md
nix/: flake-module.nix
nix/resources/skills/agent-ear/: SKILL.md  default.nix
nix/resources/skills/agent-ear-briefing/: SKILL.md
nix/resources/skills/agent-ear-capture/: SKILL.md
nix/resources/skills/agent-ear-video/: SKILL.md
nix/resources/workflows/: voice-capture.md  voice-mode.md
scripts/: agent-ear-interactive.sh  agent-ear.sh  check-gemini-safety.sh  test-dispatcher.sh
src/: agent_ear.py  agent_ear_cli.py  briefing.py  config.py  cost_tracker.py  gcs_provisioning.py  output.py  pricing.py  prompt_validator.py  pyproject.toml  recording.py  transcription.py  upload.py  video.py
src/tests/: __init__.py  conftest.py  factories.py  test_briefing.py  test_cli.py  test_config.py  test_cost_tracker.py  test_extra_tokens.py  test_media_validation.py  test_output.py  test_pipeline.py  test_pricing.py  test_prompt_validator.py  test_transcription.py  test_upload.py  test_validation_flow.py
templates/: braindump.md  dictation.md  interview.md  lecture-notes.md  meeting-notes.md  quick-transcript.md
templates/internal/: audio-transcription.md  video-transcription.md  youtube-transcription.md
