[project]
name = "agent-ear"
version = "1.1.0"
description = "Agentic voice capture tool — agent-steerable audio transcription"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-storage",
    "google-cloud-service-usage",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "numpy",
    "pyyaml",
    "tenacity>=8.0",
    "tqdm",
]

[project.scripts]
agent-ear = "agent_ear_cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent_ear_cli", "agent_ear", "config", "briefing", "prompt_validator", "cost_tracker", "gcs_provisioning"]

[tool.pytest.ini_options]
markers = [
    "integration: requires API access and network",
]
