[project]
name = "agent-ear"
version = "1.1.0"
description = "Agentic voice capture tool — agent-steerable audio transcription"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-storage",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "numpy",
    "pyyaml",
    "tenacity>=8.0",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
agent-ear = "agent_ear_cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "agent_ear_cli",
    "agent_ear",
    "config",
    "briefing",
    "prompt_validator",
    "cost_tracker",
    "recording",
    "video",
    "upload",
    "transcription",
    "output",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires API access and network",
]
testpaths = ["tests"]
