[project]
name = "agent-ear"
version = "1.1.0"
description = "Agentic voice capture tool — agent-steerable audio transcription"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "google-cloud-storage",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "numpy",
    "pyyaml",
    "tenacity>=8.0",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
agent-ear = "agent_ear_cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "agent_ear_cli",
    "agent_ear",
    "config",
    "briefing",
    "prompt_validator",
    "cost_tracker",
    "recording",
    "video",
    "upload",
    "transcription",
    "output",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires API access and network",
]
testpaths = ["tests"]

[tool.pyrefly]
# Use the .venv symlink created by shellHook → points to Nix testVenv
python-interpreter-path = ".venv/bin/python"
[tool.ruff]
line-length = 110  # accommodate existing codebase style + long prompt strings

[tool.ruff.lint]
select = ["E", "F", "W", "S", "I"]  # errors, pyflakes, warnings, security, isort
ignore = [
    "E501",  # line-too-long — ruff-format handles formatting; prompt strings are naturally long
    "S603",  # subprocess call — expected in CLI tool
    "S607",  # partial executable path — expected for system commands (afplay, aplay, ffmpeg)
    "S110",  # try-except-pass — used for best-effort operations (sound playback)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]      # allow assert in tests (when run from src/)
"src/tests/*" = ["S101"]  # allow assert in tests (when run from repo root)

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # allow assert — ruff S101 handles the test exclusion
